# Livox-SDK

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE.txt  README.md  README_CN.md
cmake/: install-config.cmake  install-rules.cmake  variables-and-options.cmake
doc/: Livox_SDK_Communication_Protocol.md  didar_sdk_design_note.doc
doc/sphinx/: Makefile
doc/sphinx/source/: conf.py  index.rst
docs/: _fast_c_r_c_8h.html  _fast_c_r_c_8h_source.html  _r_e_a_d_m_e_8md.html  _r_e_a_d_m_e_8md_source.html  android__sink_8h.html  android__sink_8h.js  android__sink_8h_source.html  annotated.html  annotated_dup.js  ansicolor__sink_8h.html  ansicolor__sink_8h.js  ansicolor__sink_8h_source.html  async_8h.html  async_8h.js  async_8h_source.html  async__logger_8h.html  async__logger_8h.js  async__logger_8h_source.html  async__logger__impl_8h.html  async__logger__impl_8h_source.html  base__sink_8h.html  base__sink_8h_source.html  basic__file__sink_8h.html  basic__file__sink_8h.js  basic__file__sink_8h_source.html  bin__to__hex_8h.html  bin__to__hex_8h.js  bin__to__hex_8h_source.html  chrono_8h.html  chrono_8h.js  chrono_8h_source.html  circular__q_8h.html  circular__q_8h_source.html  class_fast_c_r_c16-members.html  class_fast_c_r_c16.html  class_fast_c_r_c16.js  class_fast_c_r_c32-members.html  class_fast_c_r_c32.html  class_fast_c_r_c32.js  classes.html  (+1266 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_1c.html  all_1c.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_14.js  classes_15.js  classes_2.js  classes_3.js  (+150 more)
sample/hub/: CMakeLists.txt  main.c
sample/hub_lvx_file/: CMakeLists.txt  lvx_file.cpp  lvx_file.h  main.cpp
sample/lidar/: CMakeLists.txt  main.c
sample/lidar_lvx_file/: CMakeLists.txt  lvx_file.cpp  lvx_file.h  main.cpp
sample_cc/hub/: CMakeLists.txt  lds_hub.cpp  lds_hub.h  main.cpp
sample_cc/lidar/: CMakeLists.txt  lds_lidar.cpp  lds_lidar.h  main.cpp
sample_cc/lidar_utc_sync/: CMakeLists.txt  README.md  REANME.md  lds_lidar.cpp  lds_lidar.h  main.cpp  synchro.cpp  synchro.h
sample_cc/trouble_shooting/: CMakeLists.txt  main.cpp
sdk_core/: CMakeLists.txt  sdk_core.pri
sdk_core/include/: config.h  livox_def.h  livox_sdk.h
sdk_core/include/comm/: comm_port.h  protocol.h
sdk_core/src/: device_discovery.cpp  device_discovery.h  device_manager.cpp  device_manager.h  livox_sdk.cpp  sdk_core_src.pri
sdk_core/src/base/: command_callback.h  io_loop.cpp  io_loop.h  io_thread.cpp  io_thread.h  logging.cpp  logging.h  network_util.cpp  network_util.h  noncopyable.h  src_base.pri  thread_base.cpp  thread_base.h  util.cpp  util.h
sdk_core/src/base/multiple_io/: multiple_io_base.cpp  multiple_io_base.h  multiple_io_epoll.cpp  multiple_io_epoll.h  multiple_io_factory.h  multiple_io_kqueue.cpp  multiple_io_kqueue.h  multiple_io_poll.cpp  multiple_io_poll.h  multiple_io_select.cpp  multiple_io_select.h
sdk_core/src/base/network/: network_util.h
sdk_core/src/base/network/unix/: network_util.cpp
sdk_core/src/base/network/win/: network_util.cpp
sdk_core/src/base/wake_up/: wake_up_pipe.h
sdk_core/src/base/wake_up/unix/: wake_up_pipe.cpp
sdk_core/src/base/wake_up/win/: wake_up_pipe.cpp
sdk_core/src/comm/: comm_port.cpp  sdk_protocol.cpp  sdk_protocol.h
sdk_core/src/command_handler/: command_channel.cpp  command_channel.h  command_handler.cpp  command_handler.h  command_impl.cpp  command_impl.h  hub_command_handler.cpp  hub_command_handler.h  lidar_command_handler.cpp  lidar_command_handler.h
sdk_core/src/data_handler/: data_handler.cpp  data_handler.h  hub_data_handler.cpp  hub_data_handler.h  lidar_data_handler.cpp  lidar_data_handler.h
